--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,15 +10,16 @@
     sothree:umanoOverlay="true"
     sothree:umanoPanelHeight="68dp"
     sothree:umanoParallaxOffset="100dp"
-    sothree:umanoScrollableView="@+id/list"
+    sothree:umanoScrollableView="@+id/apps_list_recycler_view"
     sothree:umanoShadowHeight="4dp">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/main_parent_home_screen"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/main_parent_home_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="68dp"
         tools:context="in.ashutoshchaubey.studybuddy.MainActivity">
 
 
@@ -38,7 +39,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/views_margin_padding_m"
                 android:background="@android:color/transparent"
-                android:hint="@string/note_hint" />
+                android:hint="@string/note_hint"
+                android:focusable="false"/>
 
             <ImageView
                 android:layout_width="match_parent"
@@ -47,17 +49,6 @@
                 android:scaleType="centerCrop" />
 
         </LinearLayout>
-
-
-        <Button
-            android:id="@+id/apps_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_margin="@dimen/views_margin_padding_m"
-            android:background="@drawable/button_background"
-            android:text="@string/apps" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -94,8 +85,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_margin="@dimen/views_margin_padding_m"
+            android:layout_marginEnd="@dimen/views_margin_padding_m"
+            android:layout_marginBottom="68dp"
             android:padding="@dimen/views_margin_padding_m"
+            android:layout_marginTop="@dimen/views_margin_padding_m"
             android:src="@drawable/settings_menu"
             app:backgroundTint="#FF5722" />
 
@@ -159,7 +152,28 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="68dp"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/arrow_up"
+                android:padding="-8dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#ffffff"
+                android:text="@string/apps"/>
+
+        </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/apps_list_recycler_view"
