--- a/app/src/main/res/layout/app_item.xml
+++ b/app/src/main/res/layout/app_item.xml
@@ -18,6 +18,7 @@
         android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="@string/app_name"/>
+        tools:text="@string/app_name"
+        android:textColor="#ffffff"/>
 
 </LinearLayout>
