--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="views_margin_padding_xl">48dp</dimen>
     <dimen name="views_margin_padding_xxl">64dp</dimen>
     <dimen name="views_margin_padding_xxxl">96dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
