--- a/app/src/main/res/layout/panel_collapsed.xml
+++ b/app/src/main/res/layout/panel_collapsed.xml
@@ -8,7 +8,6 @@
     android:layout_marginBottom="68dp"
     tools:context="in.ashutoshchaubey.studybuddy.MainActivity">
 
-
     <LinearLayout
         android:id="@+id/saved_note_parent"
         android:layout_width="match_parent"
@@ -41,6 +40,7 @@
             android:visibility="gone"/>
 
         <ImageView
+            android:id="@+id/note_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/views_margin_padding_m"
