--- a/app/src/main/res/layout/panel_expanded.xml
+++ b/app/src/main/res/layout/panel_expanded.xml
@@ -39,6 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:gravity="center"
                 android:padding="@dimen/views_margin_padding_s">
                 <ImageView
                     android:layout_width="wrap_content"
